data collection ready

--- a/ZoomCamp/Project2/script.ipynb
+++ b/ZoomCamp/Project2/script.ipynb
@@ -27,12 +27,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
-    "import tweepy"
+    "import tweepy\n",
+    "import pandas as pd"
    ]
   },
   {
@@ -187,7 +188,7 @@
     "responses = client.search_recent_tweets(\n",
     "        query='nba -is:retweet -is:reply -is:quote lang:en',\n",
     "        tweet_fields=['created_at', 'public_metrics', 'text'], \n",
-    "        user_fields=['username', 'public_metrics','location','verified','description'],\n",
+    "        user_fields=['username', 'public_metrics','location','description'],\n",
     "        expansions='author_id',\n",
     "        max_results=10\n",
     "        )"
@@ -201,31 +202,6 @@
    "source": [
     "for tweet in responses:\n",
     "    nba.append(tweet)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[<Tweet id=1592575688544063490 text='#乐鱼体育 #欧宝体育 #篮球 #八戒体育 #NBA #365体育  Neeland’s animated61 face as he detailed62     https://t.co/mYTH1B3W22'>, <Tweet id=1592575681686163458 text='Kevin Walkley Joyce Kit #AG捕鱼机 Joanna Dillon Grace Lucius  #英雄联盟 #火狐体育 #竞彩 #完美体育 #NBA #365体育 Wendell Judd Dempsey Lindsay https://t.co/2Ej1K2UFnG'>, <Tweet id=1592575681178660864 text='Vito Ford Perry Clark(e) #横滨水手 Valerie Hobbes Letitia Reade  #乐鱼体育 #欧宝体育 #开云 #时时彩 #NBA #365体育 Archibald Smith Joyce Stevenson https://t.co/VKPYfaON5U'>, <Tweet id=1592575676267515904 text='Alfred Wordsworth Wilbur Bartholomew Penelope Lancelot  #竞彩篮球 #亚博 #LOL #华体会体育 #NBA #365体育 Wordsworth Stella https://t.co/IbxcsWk60o'>, <Tweet id=1592575673138544641 text='Rod Nehemiah Judy Harriman #区块链 Aubrey Priestley #天津 Christine Cronin Roderick Alsop(p)  #英雄联盟 #火狐体育 #竞彩 #完美体育 #NBA #365体育 Tyrone Kitty https://t.co/jaH6UEpE8g'>, <Tweet id=1592575669354909696 text='James Wiseman to the G-League?! LONG OVERDUE MOVE?! | Howdy Partners #GoldenState #Warriors #NBA Video: https://t.co/ilmZDGBUKR'>, <Tweet id=1592575666955771904 text=\"Get HYPE for the New Orleans Pelicans' Upcoming Home Games! #NewOrleans #Pelicans #NBA Video: https://t.co/1r9Ed1zzjm\">, <Tweet id=1592575666750644226 text='There is a safe spot within every tornado. My job is to find it.\\nWho am I?@NCAA @usedgov @NBA @WNBA @NFL @SportsCenter @espn https://t.co/hMzy6Ge5uA'>, <Tweet id=1592575665525907457 text='Westworld (15) Wright, Abrams, Sarafyan Authentic Signed 8x10 Photo BAS #A70491 | $299.99 | @CollectingAll | #collectingall #sportsmemorabilia #sportscards #whodoyoucollect #memorabilia #thehobby #autograph #sports #nfl #basketballcards #football #nba #paniniamerica #basketball https://t.co/i3GQW9dkSM'>, <Tweet id=1592575661876555777 text='#乐鱼体育 #欧宝体育 #篮球 #八戒体育 #NBA #365体育     singing through Mulberry. Here and there, apart from thehttps://t.co/kbftBuYEJL'>]\n",
-      "\n",
-      "{'users': [<User id=1562987502239002624 name=亚博/亚博体育/乐鱼体育/百家乐/pg电子/棋牌/德州扑克/幸运飞艇/三公/AG真人/BG真人/彩票 username=scripps_jerome>, <User id=1358724294461640704 name=亚博/开云/乐鱼/爱游戏/万博/亚美/火狐/欧宝/九州/百家乐/乐动/英皇/彩票/卡塔尔世界杯 username=4mkludlf960ntqg>, <User id=1556259226296922112 name=亚博/开云/乐鱼/爱游戏/万博/亚美/火狐/欧宝/九州/百家乐/乐动/英皇/彩票/卡塔尔世界杯 username=d_nagjibhai>, <User id=885515316519948288 name=亚博/亚博体育/乐鱼体育/百家乐/pg电子/棋牌/德州扑克/幸运飞艇/三公/AG真人/BG真人/彩票 username=ActorFernel>, <User id=1274090200566771712 name=长春 武汉 西安 桂林 东阳 牡丹江 洛阳 绵阳 陕西 石家庄 福州 username=KMndewa>, <User id=115584885 name=San Francisco Sports username=SF_Sports_Fans>, <User id=115285160 name=New Orleans Sports username=NOLAfans>, <User id=902334274061254656 name=Scooter H Moor bka Craig H Johnson II username=ScooterMoor>, <User id=1035305829149245440 name=CollectingAll username=CollectingAll>, <User id=1562684875890511873 name=亚博 开云 乐鱼 爱游戏 万博 亚美 火狐 欧宝 九州 百家乐 乐动 英皇 彩票 卡塔尔世界杯 username=andrew_blithe>]}\n",
-      "\n",
-      "[]\n",
-      "\n",
-      "{'newest_id': '1592575688544063490', 'oldest_id': '1592575661876555777', 'result_count': 10, 'next_token': 'b26v89c19zqg8o3fpzhk28gyy8k3pf7s0cz0fhf7kclfh'}\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "for item in nba:\n",
-    "    print(item, end='\\n\\n')"
    ]
   },
   {
@@ -246,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -294,13 +270,249 @@
        "  'location': '网址↑↑↑'}}"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "user_dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'username': '亚博/亚博体育/乐鱼体育/百家乐/pg电子/棋牌/德州扑克/幸运飞艇/三公/AG真人/BG真人/彩票',\n",
+       " 'followers': 44,\n",
+       " 'tweets': 2337,\n",
+       " 'location': 'San Diego, CA'}"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "user_dict[1562650094151036936]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result = []\n",
+    "for tweet in responses.data:\n",
+    "    author_info = user_dict[tweet.author_id]\n",
+    "    result.append(\n",
+    "        {\n",
+    "            'author_id': tweet.author_id,\n",
+    "            'username': author_info['username'],\n",
+    "            'author_followers': author_info['followers'],\n",
+    "            'author_tweets': author_info['tweets'],\n",
+    "            'author_location': author_info['location'],\n",
+    "            'text': tweet.text,\n",
+    "            'created_at': tweet.created_at,\n",
+    "            'retweets': tweet.public_metrics['retweet_count'],\n",
+    "            'replies': tweet.public_metrics['reply_count'],\n",
+    "            'likes': tweet.public_metrics['like_count'],\n",
+    "        }\n",
+    "    )\n",
+    "df = pd.DataFrame(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>author_id</th>\n",
+       "      <th>username</th>\n",
+       "      <th>author_followers</th>\n",
+       "      <th>author_tweets</th>\n",
+       "      <th>author_location</th>\n",
+       "      <th>text</th>\n",
+       "      <th>created_at</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1562650094151036936</td>\n",
+       "      <td>亚博/亚博体育/乐鱼体育/百家乐/pg电子/棋牌/德州扑克/幸运飞艇/三公/AG真人/BG真...</td>\n",
+       "      <td>44</td>\n",
+       "      <td>2337</td>\n",
+       "      <td>San Diego, CA</td>\n",
+       "      <td>#乐鱼体育 #欧宝体育 #篮球 #八戒体育 #NBA #365体育  He had neve...</td>\n",
+       "      <td>2022-11-15 18:07:54+00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2309895487</td>\n",
+       "      <td>CelebCritics.com</td>\n",
+       "      <td>1847</td>\n",
+       "      <td>5339</td>\n",
+       "      <td>None</td>\n",
+       "      <td>Arnetta Yardbourgh: Ex-Girlfriend of NBA playe...</td>\n",
+       "      <td>2022-11-15 18:07:54+00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1349054607331389441</td>\n",
+       "      <td>北京 南京 海口 河源 台州 文登 武安 玉溪 朔州 北京 合肥</td>\n",
+       "      <td>9</td>\n",
+       "      <td>10298</td>\n",
+       "      <td>TengFei789</td>\n",
+       "      <td>Eve Cocker Murphy Lawrence #棋牌 Salome Geordie ...</td>\n",
+       "      <td>2022-11-15 18:07:53+00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1563337269007699968</td>\n",
+       "      <td>亚博/亚博体育/乐鱼体育/百家乐/pg电子/棋牌/德州扑克/幸运飞艇/三公/AG真人/BG真...</td>\n",
+       "      <td>31</td>\n",
+       "      <td>2360</td>\n",
+       "      <td>Iraq</td>\n",
+       "      <td>#乐鱼体育 #欧宝体育 #篮球 #八戒体育 #NBA #365体育  “What have ...</td>\n",
+       "      <td>2022-11-15 18:07:50+00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1558702223055638528</td>\n",
+       "      <td>亚博/开云/乐鱼/爱游戏/万博/亚美/火狐/欧宝/九州/百家乐/乐动/英皇/彩票/卡塔尔世界杯</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5668</td>\n",
+       "      <td>网址↑↑↑</td>\n",
+       "      <td>Tiffany Ward Quinn Frances #博彩 Xanthe Brown Ka...</td>\n",
+       "      <td>2022-11-15 18:07:49+00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>1355191605230141441</td>\n",
+       "      <td>亚博/亚博体育/乐鱼体育/百家乐/pg电子/棋牌/德州扑克/幸运飞艇/三公/AG真人/BG真...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>5611</td>\n",
+       "      <td>官网地址→</td>\n",
+       "      <td>Cora Lewis Ward Tuttle Wallis Pound  #乐鱼体育 #欧宝...</td>\n",
+       "      <td>2022-11-15 18:07:49+00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>1304263293914116096</td>\n",
+       "      <td>亚博/亚博体育/乐鱼体育/百家乐/pg电子/棋牌/德州扑克/幸运飞艇/三公/AG真人/BG真...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5646</td>\n",
+       "      <td>官网地址→</td>\n",
+       "      <td>Emma Eve Dinah Samuel Annabelle Taylor  #竞彩篮球 ...</td>\n",
+       "      <td>2022-11-15 18:07:47+00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>1132252814736891909</td>\n",
+       "      <td>上海</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2180</td>\n",
+       "      <td>联系方式▲▲▲</td>\n",
+       "      <td>Phoenix Hemingway Rita Nora #NFTs Bennett Arno...</td>\n",
+       "      <td>2022-11-15 18:07:45+00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>1563015971224203275</td>\n",
+       "      <td>亚博/亚博体育/乐鱼体育/百家乐/pg电子/棋牌/德州扑克/幸运飞艇/三公/AG真人/BG真...</td>\n",
+       "      <td>39</td>\n",
+       "      <td>2344</td>\n",
+       "      <td>Brooklyn</td>\n",
+       "      <td>#乐鱼体育 #欧宝体育 #篮球 #八戒体育 #NBA #365体育  . Suddenly ...</td>\n",
+       "      <td>2022-11-15 18:07:40+00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>1168737631171207168</td>\n",
+       "      <td>亚博/开云/乐鱼/爱游戏/万博/亚美/火狐/欧宝/九州/百家乐/乐动/英皇/彩票/卡塔尔世界杯</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2525</td>\n",
+       "      <td>网址↑↑↑</td>\n",
+       "      <td>Alexander Snow Muriel Barrett #Airdrop Marshal...</td>\n",
+       "      <td>2022-11-15 18:07:38+00:00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             author_id                                           username  \\\n",
+       "0  1562650094151036936  亚博/亚博体育/乐鱼体育/百家乐/pg电子/棋牌/德州扑克/幸运飞艇/三公/AG真人/BG真...   \n",
+       "1           2309895487                                   CelebCritics.com   \n",
+       "2  1349054607331389441                   北京 南京 海口 河源 台州 文登 武安 玉溪 朔州 北京 合肥   \n",
+       "3  1563337269007699968  亚博/亚博体育/乐鱼体育/百家乐/pg电子/棋牌/德州扑克/幸运飞艇/三公/AG真人/BG真...   \n",
+       "4  1558702223055638528    亚博/开云/乐鱼/爱游戏/万博/亚美/火狐/欧宝/九州/百家乐/乐动/英皇/彩票/卡塔尔世界杯   \n",
+       "5  1355191605230141441  亚博/亚博体育/乐鱼体育/百家乐/pg电子/棋牌/德州扑克/幸运飞艇/三公/AG真人/BG真...   \n",
+       "6  1304263293914116096  亚博/亚博体育/乐鱼体育/百家乐/pg电子/棋牌/德州扑克/幸运飞艇/三公/AG真人/BG真...   \n",
+       "7  1132252814736891909                                                 上海   \n",
+       "8  1563015971224203275  亚博/亚博体育/乐鱼体育/百家乐/pg电子/棋牌/德州扑克/幸运飞艇/三公/AG真人/BG真...   \n",
+       "9  1168737631171207168    亚博/开云/乐鱼/爱游戏/万博/亚美/火狐/欧宝/九州/百家乐/乐动/英皇/彩票/卡塔尔世界杯   \n",
+       "\n",
+       "   author_followers  author_tweets author_location  \\\n",
+       "0                44           2337   San Diego, CA   \n",
+       "1              1847           5339            None   \n",
+       "2                 9          10298      TengFei789   \n",
+       "3                31           2360            Iraq   \n",
+       "4                 0           5668           网址↑↑↑   \n",
+       "5                 2           5611           官网地址→   \n",
+       "6                 1           5646           官网地址→   \n",
+       "7                 0           2180         联系方式▲▲▲   \n",
+       "8                39           2344        Brooklyn   \n",
+       "9                 0           2525           网址↑↑↑   \n",
+       "\n",
+       "                                                text                created_at  \n",
+       "0  #乐鱼体育 #欧宝体育 #篮球 #八戒体育 #NBA #365体育  He had neve... 2022-11-15 18:07:54+00:00  \n",
+       "1  Arnetta Yardbourgh: Ex-Girlfriend of NBA playe... 2022-11-15 18:07:54+00:00  \n",
+       "2  Eve Cocker Murphy Lawrence #棋牌 Salome Geordie ... 2022-11-15 18:07:53+00:00  \n",
+       "3  #乐鱼体育 #欧宝体育 #篮球 #八戒体育 #NBA #365体育  “What have ... 2022-11-15 18:07:50+00:00  \n",
+       "4  Tiffany Ward Quinn Frances #博彩 Xanthe Brown Ka... 2022-11-15 18:07:49+00:00  \n",
+       "5  Cora Lewis Ward Tuttle Wallis Pound  #乐鱼体育 #欧宝... 2022-11-15 18:07:49+00:00  \n",
+       "6  Emma Eve Dinah Samuel Annabelle Taylor  #竞彩篮球 ... 2022-11-15 18:07:47+00:00  \n",
+       "7  Phoenix Hemingway Rita Nora #NFTs Bennett Arno... 2022-11-15 18:07:45+00:00  \n",
+       "8  #乐鱼体育 #欧宝体育 #篮球 #八戒体育 #NBA #365体育  . Suddenly ... 2022-11-15 18:07:40+00:00  \n",
+       "9  Alexander Snow Muriel Barrett #Airdrop Marshal... 2022-11-15 18:07:38+00:00  "
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
    ]
   },
   {
